# assembler

./: Cargo.toml
src/: inline_cache.rs  js_prototype.rs  js_speculate_deopt.rs  js_tag.rs  lib.rs  main.rs  object_load.rs  type_guard.rs  update_object.rs
src/arch/: arm.rs  arm64.rs  mod.rs  x64.rs
src/macro_asm/: arm64_backend.rs  arm_backend.rs  backend.rs  mod.rs  x64_backend.rs
src/platform/: exec_mem.rs  mod.rs
src/runtime/: jit_fn.rs  mod.rs  runtime.rs
src/stubs/: bubble_sort.rs  const_add.rs  const_return.rs  factorial.rs  fib.rs  jit_call.rs  jit_call_c.rs  jit_call_eight_arguments.rs  mod.rs  quicksort.rs  sum_array.rs
src/util/: hexdump.rs  mod.rs
