[package]
name    = "jit_assembler"
version = "0.1.0"
edition = "2021"

# libc 仅在 Unix 系平台（Linux / macOS）使用
# Windows 直接通过 #[link(name = "kernel32")] 调用 WinAPI，无需第三方 crate
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[[bin]]
name = "demo"
path = "src/main.rs"

[dependencies]
capstone = "0.14.0"
cranelift = "0.130.0"
cranelift-jit = "0.130.0"
cranelift-module = "0.130.0"
